# tradesense

./: .dockerignore  .env.docker  .env.example  .env.production  .gitignore  BACKEND_ANALYSIS.md  CHALLENGE_ENGINE_DESIGN.md  CONTRIBUTING.md  DELIVERY_PAYMENT_SYSTEM.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile.backend-fixed  Dockerfile.frontend  ENV_CONFIGURATION_GUIDE.md  EVENT_DRIVEN_SYSTEM_DESIGN.md  FINAL_RESULT_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_STATUS.md  INSTRUCTIONS_IMPORTANTES.txt  LICENSE  MARKET_DATA_ENGINE_DESIGN.md  MARKET_DATA_IMPLEMENTATION.md  MARKET_DATA_README.md  MOROCCO_MARKET_INTEGRATION.md  MOROCCO_MARKET_SUMMARY.md  OPEN_IN_BROWSER.md  OUVRIR_DANS_NAVIGATEUR.md  PAYMENT_DOMAIN_DESIGN.md  PAYMENT_INTEGRATION_EXAMPLE.py  PAYMENT_SIMULATION_README.md  PAYMENT_SYSTEM_SUMMARY.md  PUSH_TO_GIT.md  QUICK_START_GIT.md  QUICK_START_PAYMENT.md  README.md  README_GIT.md  README_INFRASTRUCTURE.md  READY_TO_PUSH.txt  RISK_ENGINE_DESIGN.md  RULES_ENGINE_INTEGRATION.md  (+36 more)
app/: __init__.py  access_control.py  admin.py  analytics.py  backtesting_engine.py  config.py  leaderboard.py  main.py  market_data.py  models.py  notifications.py  order_engine.py  payment_simulation.py  payments.py  portfolio_manager.py  rewards.py  technical_analysis.py  user_profiles.py  websocket.py
backend/: Dockerfile  Dockerfile.worker  app.py  models.py  requirements.txt
components/: ChallengeDashboard.jsx
config/: settings.py
database/: DELIVERY_SUMMARY.md  QUICK_REFERENCE.md  SCHEMA_README.md  example_migration.sql  export_database.sql  init.sql  schema.sql  (+3 more)
(+327 files in other folders)
